css/main.css
/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

@import url(http://fonts.googleapis.com/css?family=Dosis:600,700,800);
@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);

/* Global Reset */
* {
  margin: 0;
  padding: 0;
}

html, body { height: 100%; }

body {
  background-color: #FFF;
  font: 13.34px 'Lato', Arial, sans-serif;
  font-size: small;
  text-align: center;
}

h1, h2, h3, h4, h5, h6 {
  font-size: 100%; 
  font-family: 13.34px 'Dosis';
}

h1 { margin-bottom: 1em; }
p { margin: 1em 0; }

a         { color: #00a; }
a:hover   { color: #000; }
a:visited { color: #a0a; }

table {
  font-size: inherit;
  font: 100%;
}

/*main {
  padding: 20px 0px;
}*/

/*****************************************************************************/
/*
/* Home
/*
/*****************************************************************************/

ul.posts {
  list-style-type: none;
  margin-bottom: 2em;
}

ul.posts li {
  line-height: 1.75em;
}

ul.posts span {
  color: #aaa;
  font-family: 'Lato';
  font-size: 80%;
}

.nav {
  list-style-type: none;
}

.nav li{
  display: inline-block; 
  padding-right: 20px;
}
  

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.site {
  font-size: 115%;
  text-align: justify;
  width: 96%;
  margin: 3em auto 2em;
  line-height: 1.5em;
}

.site .header a {
  font-weight: bold;
  text-decoration: none;
}

.site .header h1.title {
  display: inline-block;
  margin-bottom: 2em;
}

.site .header h1.title a {
  color: #a00;
}

.site .header h1.title a:hover {
  color: #000;
}

.site .header a.extra {
  color: #aaa;
  margin-left: 1em;
}

.site .header a.extra:hover {
  color: #000;
}

.site .meta {
  color: #aaa;
}

.site .footer {
  font-size: 80%;
  color: #666;
  border-top: 4px solid #eee;
  margin-top: 2em;
  overflow: hidden;
}

.site .footer .contact {
  float: left;
  margin-right: 3em;
}

.site .footer .contact a {
  color: #8085C1;
}

.site .footer .rss {  
  margin-top: 1.1em;
  margin-right: -.2em;
  float: right;
}

.site .footer .rss img {
  border: 0;
}

.content {
  width: 60%;
  float: left;
  padding: 0px 10px 0px 5px;
}

.about .content {
  width: 100%;
}

/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/

/* standard */
.post pre {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .4em;
}

.post ul, .post ol {
  margin-left: 1.35em;
}

.post code {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .2em;
}

.post pre code {
  border: none;
}

/* terminal */
.post pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
}

.post pre.terminal code {
  background-color: #333;
}

/*****************************************************************************/
/*
/* About 
/*
/*****************************************************************************/

.portfolio {
  display: inline;
  float: left; 
  padding: 10px;
}

.portfolio:nth-of-type(6n) { 
  clear: left;
  float: left; 
}

/*****************************************************************************/
/*
/* Asides 
/*
/*****************************************************************************/

aside {
  width: 360px;
  display: block;
  background-color: #f4f4f4;
}

.side {
  width: 30%;
  padding: 5px;
}

/*****************************************************************************/
/*
/* Basic Styles 
/*
/*****************************************************************************/

.photo-left {
  float: left;
  padding: 0px 10px;
}

.photo-right {
  float: right;
  padding: 0px 10px;
}

.photo-center {
 display: inline-block;
 margin: 0 auto;
}

.text-left {
  text-align: left; 
}

.text-right {
  text-align: right;
}

.text-center {
  text-align: center;
}

.clear {
  clear: both;
}

